--- a/bom-front/src/app/main/home/home.component.sass
+++ b/bom-front/src/app/main/home/home.component.sass
@@ -24,3 +24,7 @@ $medium: 900px
     @media screen and (min-width: $medium)
         // font-weight: 800
         font-size: 34px
+
+.product-section
+    margin-left: 1rem
+    margin-right: 1rem
