--- a/bom-front/src/app/app.component.html
+++ b/bom-front/src/app/app.component.html
@@ -1,3 +1,19 @@
 <main-nav>
     <router-outlet></router-outlet>
+
+    <footer>
+        <div class="footer-v1 section-gap">
+            <div>
+                <div class="footer-bottom-v1">
+                    <div fxLayout='row wrap' class="col-gap">
+                        <div fxFlex.xs="100" fxFlex.sm="100" fxFlex.md="50" fxFlex.lg="100" fxFlex.xl="100"
+                            class="text-center">
+                            &copy; All Rights reserved | Made With &hearts; by Bôm
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </main-nav>
