--- a/bom-front/src/styles.sass
+++ b/bom-front/src/styles.sass
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+$footer-bg:#000000
+$footer-color:#ffffff
+
+.footer-v1
+    background: $footer-bg
+    height: 100px
+    z-index: 1
+    display: flex
+    justify-content: center
+    align-items: center
+    color: $footer-color
+    *
+        color: $footer-color
