--- a/bom-front/src/styles.sass
+++ b/bom-front/src/styles.sass
@@ -10,6 +10,7 @@ $footer-color:#ffffff
     display: flex
     justify-content: center
     align-items: center
+    margin-top: 2em
     color: $footer-color
     *
         color: $footer-color
