--- a/bom-front/src/app/global/product-card/product-card.component.sass
+++ b/bom-front/src/app/global/product-card/product-card.component.sass
@@ -1,3 +1,13 @@
 mat-card
     margin-left: 1rem
     margin-right: 1rem
+
+mat-card
+    &:hover .m-icon
+        transform: translateY(-20px)
+
+.m-icon
+    position: absolute
+    bottom: 65px
+    right: 10px
+    transition: all 0.3s ease-in
