feat: add page-title reusable component

--- a/bom-front/src/styles.sass
+++ b/bom-front/src/styles.sass
@@ -1,7 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 
+//Page Title
+$page-title-padding:7rem 0
+$page-title-align:center
+$page-title-color:#fff
+
 $footer-bg:#000000
 $footer-color:#ffffff
+
+//Page Title
+.page-title-bar
+    padding: 7rem 0
+    text-align: $page-title-align
+    background-image: url('./assets/img/cardfond.jpg')
+    background-size: cover
+    background-position: center center
+    background-repeat: no-repeat
+    color: $page-title-color
 
 .footer-v1
     background: $footer-bg
@@ -12,5 +27,3 @@ $footer-color:#ffffff
     align-items: center
     margin-top: 2em
     color: $footer-color
-    *
-        color: $footer-color
