--- a/bom-front/src/app/main/produit/produit.component.html
+++ b/bom-front/src/app/main/produit/produit.component.html
@@ -6,7 +6,35 @@
         <div fxLayout='row wrap' fxLayoutAlign="center center" class="col-gap">
             <div fxFlex.xs="100" fxFlex.sm="100" fxFlex.md=90 fxFlex.lg="80" fxFlex.xl="90">
                 <div fxLayout='row wrap' class="col-gap position-relative">
+
                     <div fxFlex.xs="100" fxFlex.sm="100" fxFlex.md=50 fxFlex.lg="50" fxFlex.xl="50">
+                        <div fxLayout='row wrap'>
+                            <div fxFlex.xs="15" fxFlex.sm="15" fxFlex.md="15" fxFlex.lg="15" fxFlex.xl="15">
+                                <div class="product-detail-image-gallery pr-4">
+                                    <mat-grid-list cols="1" rowHeight="1:1" gutterSize="20px">
+                                        <mat-grid-tile *ngFor="let img of product?.images; let i=index">
+                                            <div class="product-image-gallery-item">
+                                                <a id="{{i}}_img" class="p-link"
+                                                    [ngClass]="{ 'border-active': i === 0 }" href="javascript:void(0)">
+                                                    <img [src]="image" alt="">
+                                                </a>
+                                            </div>
+                                        </mat-grid-tile>
+                                    </mat-grid-list>
+                                </div>
+                            </div>
+                            <div fxFlex.xs="85" fxFlex.sm="85" fxFlex.md="85" fxFlex.lg="85" fxFlex.xl="85"
+                                class="relative" *ngIf="image">
+                                <app-img-zoom [imgSrc]="image" imgStyle="width:auto; height:auto;"
+                                    resultStyle="background-repeat: no-repeat; z-index: 2; position:absolute;
+                                   -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+                                    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); top: 0;left: 100%;" lensStyle="width:100px; height:100px" containerStyle="">
+                                </app-img-zoom>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- <div fxFlex.xs="100" fxFlex.sm="100" fxFlex.md=50 fxFlex.lg="50" fxFlex.xl="50">
                         <div fxLayout='row wrap'>
                             <div fxFlex.xs="15" fxFlex.sm="15" fxFlex.md="15" fxFlex.lg="15" fxFlex.xl="15">
                                 <div class="product-detail-image-gallery pr-4">
@@ -16,7 +44,6 @@
                                                 <a id="{{i}}_img" class="p-link"
                                                     [ngClass]="{ 'border-active': i === 0 }"
                                                     href="javascript:void(0)"></a>
-                                                <!-- (mouseenter)="getImagePath(img, i)" -->
                                                 <img [src]="image" alt="dsd">
                                             </div>
                                         </mat-grid-tile>
@@ -33,7 +60,7 @@
                                 </app-img-zoom>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div fxFlex.xs="100" fxFlex.sm="100" fxFlex.md=50 fxFlex.lg="50" fxFlex.xl="50">
                         <div class="product-detail-content">
                             <a href="javascript:void(0)" [routerLink]="['/']">Retour à la boutique</a>
