feat: add home banner

--- a/bom-front/src/app/main/home/home.component.html
+++ b/bom-front/src/app/main/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container" fxLayout="column">
     <div fxLayout="column">
         <div>
-            <img class="background-image" src="../../../assets/img/home_background.png">
+            <img class="background-image" src="../../../assets/img/homepage.jpg">
         </div>
         <div class="description">
             <p>Pour être réconforter, redécouvrir ses sens, réapprendre le toucher.</p>
