--- a/bom-front/src/app/main/home/home.component.sass
+++ b/bom-front/src/app/main/home/home.component.sass
@@ -9,7 +9,8 @@ $medium: 900px
     height: 100%
 
 .background-image
-    // width: 100%
+    width: 100%
+    margin-bottom: 200px
 
     // #0b214e
 .description
