--- a/bom-front/src/app/global/fiche/fiche.component.sass
+++ b/bom-front/src/app/global/fiche/fiche.component.sass
@@ -1,7 +1,25 @@
 .card-member
     width: 300px
     height: 500px
-    
-img
-    width: 300px
-    height: 100%
+
+// img
+//     width: 300px
+//     height: 100%
+
+.image-style
+    height: 400px
+    max-width: 100%
+
+mat-card
+    margin-left: 1rem
+    margin-right: 1rem
+    padding: 1rem 0 1rem 0
+
+mat-card img
+    margin: 0 0 16px 0
+
+mat-card-title
+    padding: 0 0 8px 1rem
+
+.contact-section
+    padding-left: 1rem
