--- a/bom-front/src/app/global/product-card/product-card.component.sass
+++ b/bom-front/src/app/global/product-card/product-card.component.sass
@@ -1,6 +1,5 @@
-mat-card
-    margin-left: 1rem
-    margin-right: 1rem
+.example-card
+    height: 500px
 
 mat-card
     &:hover .m-icon
@@ -12,3 +11,21 @@ mat-card
     right: 10px
     transition: all 0.3s ease-in
 
+.image-style
+    height: 400px
+    max-width: 100%
+
+mat-card
+    margin-left: 1rem
+    margin-right: 1rem
+    padding: 1rem 0 1rem 0
+
+mat-card img
+    margin: 0 0 16px 0
+
+mat-card-title
+    padding: 0 0 8px 1rem
+
+.product-content
+    padding-left: 1rem
+    
