--- a/bom-front/src/app/main/home/home.component.html
+++ b/bom-front/src/app/main/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container" fxLayout="column">
+<div fxLayout="column">
     <div fxLayout="column">
         <div>
             <img class="background-image" src="../../../assets/img/homepage.jpg">
