fix: contact forms with footer

--- a/bom-front/src/app/app.component.sass
+++ b/bom-front/src/app/app.component.sass
@@ -8,7 +8,7 @@ $page-title-color:#fff
 $footer-bg:#000000
 $footer-color:#ffffff
 
-//Main body 
+//Main body
 $body-bg:#f3f3f4
 $grey-bg:#f3f3f4
 
@@ -27,7 +27,7 @@ $font-weight-base: 400 !default
 $font-weight-medium: 500 !default
 $font-weight-bold: 600 !default
 
-//Heading Font Size 
+//Heading Font Size
 
 $font-size-h1: 3.25rem !default//52px
 $font-size-h2: 2.813rem !default//45px
@@ -103,20 +103,22 @@ body .img-zoom-container
 
 .footer-v1
     background: $footer-bg
-    height: 100px
     z-index: 1
     display: flex
     justify-content: center
     align-items: center
     margin-top: 2em
     color: $footer-color
+    left: 0
+    bottom: 0 !important
+    width: 100%
 
 // BASE
 
 *, ::after, ::before
     box-sizing: border-box
 
-// // Basics tags 
+// // Basics tags
 
 code
     padding: 8px
@@ -188,8 +190,8 @@ img
 // .container
 //     width: 1450px
 
-//Row and col fix 
-//If you dont wanna use this then You can use fxFlexGap to give margin to the column 
+//Row and col fix
+//If you dont wanna use this then You can use fxFlexGap to give margin to the column
 .col-gap
     margin-left: -15px
     margin-right: -15px
@@ -200,7 +202,7 @@ img
     margin-bottom: 1rem
     margin-top: 1rem
 
-//Block Title 
+//Block Title
 .block-title h2
     margin-bottom: 3rem
 
@@ -274,7 +276,7 @@ body app-main,body .mat-drawer-content
     overflow-x: hidden
     overflow-y: auto
 
-// 
+//
 .section-gap
     padding: 5rem 0
 
