--- a/bom-front/src/app/main/about/contact/contact.component.html
+++ b/bom-front/src/app/main/about/contact/contact.component.html
@@ -1,5 +1,5 @@
-<div>
-  <div class="split-left">
+<div class="background">
+  <div>
     <mat-card>
       <img class="logo-img" src="../../../../assets/img/logo70px.png" alt="bom">
       <mat-card-title>Ecrivez nous</mat-card-title>
@@ -36,8 +36,5 @@
         </button>
       </mat-card-actions>
     </mat-card>
-  </div>
-  <div class="split-right">
-    <img class="contact-img" src="../../../../assets/contactLogo.png" alt="contact">
   </div>
 </div>
